--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -38,6 +38,9 @@
                   <a href="#">Tasks</a>
                 </li>
                 <li>
+                  <a href="/groups">Groups</a>
+                </li>
+                <li>
                   <a href="/upload">Upload Tasks</a>
                 </li>
               </ul>
