--- a/app/views/users/index.ejs
+++ b/app/views/users/index.ejs
@@ -1,6 +1,3 @@
-<script>
-  var moderators = <%- JSON.stringify(_und.filter(users, function(user){ return _und.contains(user.roles, 'Moderator')})) %>
-</script>
 <div class="bs-docs-section">
    <div class="row">
       <div class="col-lg-12">
@@ -28,20 +25,20 @@
                      <th>Lead</th>
                      <th>Moderator</th>
                      <th>Analyst</th>
-                     <th>Choose Moderator</th>
+                     <th>Choose Group</th>
                      <th>Active</th>
                      <th>Actions</th>
                   </tr>
                </thead>
                <tbody id="users_list">
                  <% for(var i=0; i<users.length; i++) { %>
-                   <tr data-user_id="<%= users[i].id %>" data-moderator_id="<%= users[i].manage_by_user_id %>">
+                   <tr data-user_id="<%= users[i].id %>" data-group_id="<%= users[i].group_id %>">
                      <td class="col-md-2"><%= users[i].name %></td>
                      <td class="col-md-3"><%= users[i].email %></td>
                      <td class="col-md-2"><input type="checkbox" class="user_role_updated" data-user_id="<%= users[i].id %>" data-role_name="Lead" <%= _und.contains(users[i].roles, 'Lead') ? 'checked' : ""  %>></td>
                      <td class="col-md-2" ><input type="checkbox" class="user_role_updated" data-user_id="<%= users[i].id %>" data-role_name="Moderator" <%= _und.contains(users[i].roles, 'Moderator') ? 'checked' : "" %>></td>
                      <td class="col-md-2" ><input type="checkbox" class="user_role_updated" data-user_id="<%= users[i].id %>" data-role_name="Analyst" <%= _und.contains(users[i].roles, 'Analyst') ? 'checked' : ""%>></td>
-                     <td class="col-md-4 chooseModerator"> </td>
+                     <td class="col-md-4 chooseGroup"> </td>
                      <td class="col-md-2" ><input type="checkbox" class="user_role_updated" data-user_id="<%= users[i].id %>" data-role_name="Active" <%= users[i].is_active ? 'checked' : "" %>></td>
                      <td class="col-md-1"><a href="/profile/<%= users[i]._id%>/edit" class="btn btn-success">Edit</a></td>
                    </tr>
