--- a/app/views/tasks/view_task.ejs
+++ b/app/views/tasks/view_task.ejs
@@ -9,13 +9,13 @@
           <div class="form-group">
             <label for="fromDate" class="col-lg-2 control-label">From Date:</label>
             <div class="col-lg-3">
-              <input type="text" class="form-control" id="datepicker" placeholder="mm/dd/yyyy" name="fromDate" value=""  required>
+              <input type="text" class="form-control datepicker"  placeholder="yyyy-mm-dd" name="fromDate" value=""  required>
             </div>
           </div>
            <div class="form-group">
             <label for="toDate" class="col-lg-2 control-label">To Date:</label>
             <div class="col-lg-3">
-              <input type="text" class="form-control" id="datepicker" placeholder="mm/dd/yyyy" name="toDate" value=""  required>
+              <input type="text" class="form-control datepicker" placeholder="yyyy-mm-dd" name="toDate" value=""  required>
             </div>
           </div>
           
