--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -31,15 +31,21 @@
             </div>
             <div class="navbar-collapse collapse" id="navbar-main">
               <ul class="nav navbar-nav">
+                <% if ((_und.contains(user.roles, 'Manager')) { %>
                 <li class="dropdown">
                   <a href="/users">Users</span></a>
                 </li>
+                <% } %>
+
                 <li>
-                  <a href="#">Tasks</a>
+                  <a href="/view_task">Tasks</a>
                 </li>
-                <li>
+                <% if ((_und.contains(user.roles, 'Manager')) { %>
+                  <li>
                   <a href="/groups">Groups</a>
                 </li>
+                <% } %>
+
                 <% if ((_und.contains(user.roles, 'Moderator')) || (_und.contains(user.roles, 'Analyst'))) { %>
                   <li>
                     <a href="/upload">Upload Tasks</a>
