--- a/app/views/users/profile.ejs
+++ b/app/views/users/profile.ejs
@@ -113,13 +113,13 @@
 
     %>
          <tr>
-             <td class="col-md-2"><%= tasks[i]["S_No"] %></td>
+             <td class="col-md-2"><%= i + 1 %></td>
              <td class="col-md-2"><%= tasks[i].query%></td> 
              <td class="col-md-2"><%= tasks[i]['query_flag']%></td> 
              <td class="col-md-2"><%= tasks[i]['ad_creative']%></td> 
              <td class="col-md-2"><%= tasks[i]['ad_creative_flag']%></td> 
              <td class="col-md-2"><%= tasks[i]['ad_creative_rating']%></td> 
-             <td class="col-md-2"><%= tasks[i]['landing_page']%></td> 
+             <td class="col-md-1 landing_url_wrap"><%= tasks[i]['landing_page']%></td> 
              <td class="col-md-2"><%= tasks[i]['landing_page_flag']%></td> 
              <td class="col-md-2"><%= tasks[i]['landing_page_rating']%></td> 
               <td class="col-md-2"><%= tasks[i]['user_comments']%></td>
