--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- <link rel="icon" href="../../favicon.ico">-->
-
+  
     <title><%- title %></title>
 
     <!-- Bootstrap core CSS -->
@@ -25,7 +25,7 @@
         <div class="navbar navbar-default navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
-              <a href="/" class="navbar-brand">Google Ads</a>
+              <a href="/" class="navbar-brand">Task Engine</a>
               <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
               </button>
             </div>
