1. Add groups field in Create new Page. 2. Fix the password change issue as well in that page

--- a/app/views/tasks/upload.ejs
+++ b/app/views/tasks/upload.ejs
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-5 col-sm-offset-3" id="upload">
     <div class="well bs-component">
-      <form class="form-horizontal" action="/upload" method="post" enctype="multipart/form-data">
+      <form id="taskUpload" class="form-horizontal" action="/upload" method="post" enctype="multipart/form-data">
         <fieldset>
           <legend>Upload</legend>
           <div class="form-group">
