--- a/app/views/users/new_user.ejs
+++ b/app/views/users/new_user.ejs
@@ -30,6 +30,13 @@
             </div>
           </div>
           <div class="form-group">
+            <label for="inputRole" class="col-lg-2 control-label">Group</label>
+            <div class="col-lg-10 chooseGroupUser">
+              
+            </div>
+          </div>
+
+          <div class="form-group">
             <label for="inputRole" class="col-lg-2 control-label">Roles</label>
             <div class="col-lg-10">
               <div class="checkbox">
