--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -16,7 +16,7 @@
     
     <!-- Bootstrap theme -->
     <link href="../../css/slimplex.css" rel="stylesheet">
-    <link src="../../css/datepicker.css" rel="stylesheet">
+    <link href="../../css/datepicker.css" rel="stylesheet">
     <link href="../../css/style.css" rel="stylesheet">
 </head>
   <body>
