--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -53,7 +53,7 @@
               </ul>
 
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="/profile" > Hi <%= user.name %></a></li>
+                <li><a href="#" > Hi <%= user.name %></a></li>
                 <li><a href="/logout">Logout</a></li>
               </ul>
             </div>
