--- a/app/views/tasks/search_task.ejs
+++ b/app/views/tasks/search_task.ejs
@@ -1,34 +1,39 @@
-<% for(var i=0; i<tasks.length; i++) { %>
-         <tr>
-             <td class="col-md-2"><%= i + 1 %></td>
-             <td class="col-md-2"><%= tasks[i].query%></td> 
-             <td class="col-md-2"><%= tasks[i]['query_flag']%></td> 
-             <td class="col-md-2"><%= tasks[i]['ad_creative']%></td> 
-             <td class="col-md-2"><%= tasks[i]['ad_creative_flag']%></td> 
-             <td class="col-md-2"><%= tasks[i]['ad_creative_rating']%></td> 
-             <td class="col-md-1 landing_url_wrap"><%= tasks[i]['landing_page']%></td> 
-             <td class="col-md-2"><%= tasks[i]['landing_page_flag']%></td> 
-             <td class="col-md-2"><%= tasks[i]['landing_page_rating']%></td> 
-              <td class="col-md-2"><%= tasks[i]['user_comments']%></td>
-              <% if (typeof user !== 'undefined') {
-                  if(user.roles!="Analyst"){
-                 // console.log(" Conditoionnon ==== ",(tasks[i]["is_correct"]==true));
-               %>
-              <td class="col-md-2"><%= tasks[i]['user_name']%> </td>
-               <td class="col-md-4">
-                correct  <input type="radio" name="correct<%= i %>" id="correct<%= i %>" value="Correct" <%= (tasks[i]["is_correct"]==true) ? 'checked' : ""%> />
-                InCorrect <input type="radio" name="correct<%= i %>" id="incorrect<%= i %>" value="InCorrect"<%=(tasks[i]["is_correct"]==false) ? 'checked' : ""%> />
-             </td>
-            <td class="col-md-2"> <input type="textarea" name="text_comment<%= i %>" value="<%=tasks[i]['verifier_comments']%>"/></td>
-             <td class="col-md-2"><%= tasks[i]['verifier_name']%> </td>
-           <%  
+<% if (tasks.length > 0) { 
+   if( typeof tasks !== "undefined" ){
+   for(var i=0; i<tasks.length; i++) {  %>
+     <tr>
+         <td class="col-md-2"><%= i + 1 %></td>
+         <td class="col-md-2"><%= tasks[i].query%></td> 
+         <td class="col-md-2"><%= tasks[i]['query_flag']%></td> 
+         <td class="col-md-2"><%= tasks[i]['ad_creative']%></td> 
+         <td class="col-md-2"><%= tasks[i]['ad_creative_flag']%></td> 
+         <td class="col-md-2"><%= tasks[i]['ad_creative_rating']%></td> 
+         <td class="col-md-1 landing_url_wrap"><%= tasks[i]['landing_page']%></td> 
+         <td class="col-md-2"><%= tasks[i]['landing_page_flag']%></td> 
+         <td class="col-md-2"><%= tasks[i]['landing_page_rating']%></td> 
+          <td class="col-md-2"><%= tasks[i]['user_comments']%></td>
+          <% if (typeof user !== 'undefined') {
+              if(user.roles!="Analyst"){
+             // console.log(" Conditoionnon ==== ",(tasks[i]["is_correct"]==true));
+           %>
+          <td class="col-md-2"><%= tasks[i]['user_name']%> </td>
+           <td class="col-md-4">
+            correct  <input type="radio" name="correct<%= i %>" id="correct<%= i %>" value="Correct" <%= (tasks[i]["is_correct"]==true) ? 'checked' : ""%> />
+            InCorrect <input type="radio" name="correct<%= i %>" id="incorrect<%= i %>" value="InCorrect"<%=(tasks[i]["is_correct"]==false) ? 'checked' : ""%> />
+         </td>
+        <td class="col-md-2"> <input type="textarea" name="text_comment<%= i %>" value="<%=tasks[i]['verifier_comments']%>"/></td>
+         <td class="col-md-2"><%= tasks[i]['verifier_name']%> </td>
+       <%  
 
-           }
-           }%>
-             <td><input type="hidden" id="user_role" name="user_role" value="<%=tasks[i]['_id']%>"> </td>
-             <td> </td>
-             <td> </td>
-             <td> </td>
-       </tr>
+       }
+       }%>
+         <td><input type="hidden" id="user_role" name="user_role" value="<%=tasks[i]['_id']%>"> </td>
+         <td> </td>
+         <td> </td>
+         <td> </td>
+   </tr>
         
- <% } %>
+ <% } } %>
+<% } else { %>
+ <tr><td></td><td></td><td></td><td></td><td></td><td></td><td class="col-md-10">  No data Found</td></tr>
+<% } %>
