Added Audit page. Audit page will be accessible to Manager , lead and Moderator.View Task page will be available to Analyst and Moderator

--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -46,6 +46,9 @@
                 <li>
                   <a href="/view_task">Tasks</a>
                 </li>
+                 <li>
+                  <a href="/audit_task">Audit Tasks</a>
+                </li>
                 <% if ((_und.contains(user.roles, 'Manager'))) { %>
                   <li>
                   <a href="/groups">Groups</a>
