Added feature to edit groups

--- a/app/views/groups/index.ejs
+++ b/app/views/groups/index.ejs
@@ -16,6 +16,7 @@
                   <tr>
                      <th>Name</th>
                      <th>Users</th>
+                     <th>Actions</th>
                   </tr>
                </thead>
                <tbody id="group_list">
@@ -23,6 +24,7 @@
                    <tr data-group_id="<%= groups[i].id %>">
                      <td class="col-md-2"><%= groups[i].name %></td>
                      <td class="col-md-8"><%= groups[i].email %></td>
+                     <td class="col-md-1"><a href="/group/<%= groups[i]._id%>/edit" class="btn btn-success">Edit</a></td>
                    </tr>
                   <% } %>
                </tbody>
