Adding Pending Option for search functionality

--- a/app/views/tasks/audit_task.ejs
+++ b/app/views/tasks/audit_task.ejs
@@ -63,6 +63,12 @@
            }%>
            <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
+             <label for="pending_task" class="control-label">Pending Task</label>
+              <input type="checkbox" id="pending_task" name="pending_task" value="PendingTask">
+            </div>
+          </div>
+           <div class="form-group">
+            <div class="col-lg-10 col-lg-offset-2">
               <button type="submit" class="btn btn-success">View Task</button>
             </div>
           </div>
