--- a/app/views/layout/layout.ejs
+++ b/app/views/layout/layout.ejs
@@ -47,10 +47,15 @@
                   <li>
                   <a href="/view_task">Tasks</a>
                 </li>
+                 
+                <% } %>
+
+                 <% if ((_und.contains(user.roles, 'Moderator')) || (_und.contains(user.roles, 'Manager')) || (_und.contains(user.roles, 'Lead'))) { %>
                   <li>
                   <a href="/audit_task">Audit Tasks</a>
                 </li>
                 <% } %>
+
                 <% if ((_und.contains(user.roles, 'Manager'))) { %>
                   <li>
                   <a href="/groups">Groups</a>
