Adding meaningful name for table column

--- a/app/views/tasks/view_task.ejs
+++ b/app/views/tasks/view_task.ejs
@@ -27,7 +27,7 @@
               <button type="submit" class="btn btn-success">View Task</button>
             </div>
           </div>
-           </div>
+        
          </fieldset>
       </form>
  
@@ -50,10 +50,10 @@
                   if(user.roles!="Analyst"){
                %>
              <th data-field="user_name">Analyst Name</th>
-            <th data-field="is_correct">is_correct</th>
-            <th data-field="verifier_comments">verifier_comments</th>
+            <th data-field="is_correct">Is Correct</th>
+            <th data-field="verifier_comments">Verifier Comments</th>
 
-             <th data-field="verifier_name">verifier_name</th>
+             <th data-field="verifier_name">Verifier Name</th>
             <%  
 
            }
