Fixed Table alignment issue

--- a/app/views/tasks/audit_task.ejs
+++ b/app/views/tasks/audit_task.ejs
@@ -94,7 +94,7 @@
             <th data-field="ad_creative">Ad Creative</th>
             <th data-field="ad_creative_flag">Ad Creative Flag</th>
             <th data-field="ad_creative_rating">Ad Creative Rating</th>
-            <th data-field="landing_page">Landing Page</th>
+            <th data-field="landing_page wrap">Landing Page</th>
             <th data-field="landing_page_flag">Landing Page Flag</th>
             <th data-field="landing_page_rating">Landing Page Rating</th>
             <th style="width:200px" data-field="user_comments">User Comments</th>
