--- a/app/views/tasks/search_task.ejs
+++ b/app/views/tasks/search_task.ejs
@@ -8,7 +8,8 @@
          <td class="col-md-2"><%= tasks[i]['ad_creative']%></td> 
          <td class="col-md-2"><%= tasks[i]['ad_creative_flag']%></td> 
          <td class="col-md-2"><%= tasks[i]['ad_creative_rating']%></td> 
-         <td class="col-md-1 landing_url_wrap"><%= tasks[i]['landing_page']%></td> 
+         
+         <td class="col-md-1 landing_url_wrap wrap"><a target="_blank" href="<%= tasks[i]['landing_page']%>"><%= tasks[i]['landing_page']%></a></td> 
          <td class="col-md-2"><%= tasks[i]['landing_page_flag']%></td> 
          <td class="col-md-2"><%= tasks[i]['landing_page_rating']%></td> 
           <td class="col-md-2"><%= tasks[i]['user_comments']%></td>
