--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,3 +78,20 @@ th.prev, th.next, td.day {
 thead{
  background-color: #c1c0c0;
 }
+td.wrap{
+width: 200px;
+ overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  /* This is the dangerous one in WebKit, as it breaks things wherever */
+  word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
