--- a/app/views/tasks/search_task.ejs
+++ b/app/views/tasks/search_task.ejs
@@ -12,22 +12,15 @@
          <td class="col-md-1 landing_url_wrap wrap"><a target="_blank" href="<%= tasks[i]['landing_page']%>"><%= tasks[i]['landing_page']%></a></td> 
          <td class="col-md-2"><%= tasks[i]['landing_page_flag']%></td> 
          <td class="col-md-2"><%= tasks[i]['landing_page_rating']%></td> 
-          <td class="col-md-2"><%= tasks[i]['user_comments']%></td>
-          <% if (typeof user !== 'undefined') {
-              if(user.roles!="Analyst"){
-             // console.log(" Conditoionnon ==== ",(tasks[i]["is_correct"]==true));
-           %>
-          <td class="col-md-2"><%= tasks[i]['user_name']%> </td>
-           <td class="col-md-4">
-            correct  <input type="radio" name="correct<%= i %>" id="correct<%= i %>" value="Correct" <%= (tasks[i]["is_correct"]==true) ? 'checked' : ""%> />
-            InCorrect <input type="radio" name="correct<%= i %>" id="incorrect<%= i %>" value="InCorrect"<%=(tasks[i]["is_correct"]==false) ? 'checked' : ""%> />
-         </td>
-        <td class="col-md-2"> <input type="textarea" name="text_comment<%= i %>" value="<%=tasks[i]['verifier_comments']%>"/></td>
+         <td class="col-md-2"><%= tasks[i]['user_comments']%></td>
+         <td class="col-md-2"><%= tasks[i]['user_name']%> </td>
+         <% if (!tasks[i].is_correct) { %>
+           <td class="col-md-4"><%= "Pending" %></td>
+         <% } else { %>
+           <td class="col-md-4"><%= tasks[i].is_correct  ? "correct" : "incorrect" %></td>
+         <% } %>
+         <td class="col-md-2"><%=tasks[i]['verifier_comments']%></td>
          <td class="col-md-2"><%= tasks[i]['verifier_name']%> </td>
-       <%  
-
-       }
-       }%>
          <td><input type="hidden" id="user_role" name="user_role" value="<%=tasks[i]['_id']%>"> </td>
          <td> </td>
          <td> </td>
@@ -36,5 +29,5 @@
         
  <% } } %>
 <% } else { %>
- <tr><td></td><td></td><td></td><td></td><td></td><td></td><td class="col-md-10">  No data Found</td></tr>
+ <tr><td></td><td></td><td></td><td></td><td></td><td></td><td class="col-md-10">  No data Found</td><td></td><td></td><td></td><td></td></tr>
 <% } %>
